fix modals on mobile layout

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -117,7 +117,8 @@
   }
 
   .modal__image-close {
-    right: -40px;
+    right: -30px;
+    top: -30px;
     width: 30px;
     height: 30px;
   }
